# viral-clips-crew

./: .env.example  .gitignore  README.md  app.py  clipper.py  crew.py  extraction_crew.py  extracts.py  local_transcribe.py  local_whisper.py  pyproject.toml  reboot.py  requirements.txt  subtitler.py  ytdl.py
